# yaqd-kd-scientific

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-mypy.yml  run-entry-points.yml
yaqd_kd_scientific/: __init__.py  _kd_scientific_legato100.py  kd-scientific-legato100.avpr  kd-scientific-legato100.toml
